testdata/baselines/reference/submodule/conformance/jsDeclarationsReexportedCjsAlias.errors.txt
main.js(1,51): error TS2497: This module can only be referenced with ECMAScript imports/exports by turning on the 'esModuleInterop' flag and referencing its default export.


==== main.js (1 errors) ====
    const { SomeClass, SomeClass: Another } = require('./lib');
                                                      ~~~~~~~
!!! error TS2497: This module can only be referenced with ECMAScript imports/exports by turning on the 'esModuleInterop' flag and referencing its default export.
    
    module.exports = {
        SomeClass,
        Another
    }
==== lib.js (0 errors) ====
    /**
     * @param {string} a
     */
    function bar(a) {
        return a + a;
    }
    
    class SomeClass {
        a() {
            return 1;
        }
    }
    
    module.exports = {
        bar,
        SomeClass
    }